# letter-pack-label-maker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONFIGURABLE_LAYOUT.md  DOCKER.md  Dockerfile  ISSUE_CONFIGURABLE_LAYOUT.md  LICENSE  PERFORMANCE_TUNING.md  PR_CLOSING_COMMENT.md  PYODIDE_DEBUG_GUIDE.md  README.md  STATIC_VERSION.md  docker-compose.yml  generate_test_pdf.py  index_static.html  poc_pyodide.html  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/skills/csv-test-data-generator/: README.md  skill.md
.claude/skills/deployment-verification/: README.md  config.yaml  skill.md
.claude/skills/font-diagnostic/: README.md  skill.md
.claude/skills/japanese-code-checker/: README.md  skill.md
.claude/skills/pdf-validation/: README.md  skill.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude-code-review.yml  claude.yml  deploy-pages.yml  deployment-verification.yml  main.yml  multi-interface-test.yml  test-static-webui.yml
config/: label_layout.yaml  readme_config_reference.md
examples/: sample.csv
src/letterpack/: __init__.py  cli.py  csv_parser.py  label.py  web.py
tests/: conftest.py  static-html-advanced.spec.js  test_cli.py  test_csv_parser.py  test_deployment_verification.py  test_docker_deployment.py  test_font_diagnostic.py  test_label.py  test_multi_interface.py  test_performance.py
tools/: README.md  check_japanese_code.py  deployment_verifier.py  font_diagnostic.py  generate_config_docs.py  generate_test_csv.py  label_adjuster.py  performance_metrics.py
tools/templates/: label_adjuster.html
