[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letterpack-label-maker"
version = "0.1.0"
description = "レターパック用のラベルPDFを作成するツール"
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}
authors = [
    {name = "Letter Pack Label Maker Contributors"}
]
keywords = ["letterpack", "label", "pdf", "japan-post"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "reportlab>=4.0.0",
    "flask>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a1",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
]

[project.scripts]
letterpack = "letterpack.cli:main"
letterpack-web = "letterpack.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src/letterpack"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
